# confaz-automation-tool

./: .gitattributes  .gitignore  Explore.ipynb  README.md  add_data.py  main.py  pyproject.toml
src/: data_loader.py  excel_formatter.py  excel_writter.py  interface.py  main.py  process.py
