[project]
name = "sistema-confaz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.28.3",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.11.10",
    "xlrd>=2.0.1",
    "flet-cli==0.28.3",
    "flet-desktop==0.28.3",
    "pyinstaller>=6.13.0",
]


[tool.ruff]
line-length = 79
